--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>鱼酱客户端2025</title>
-</head>
-<body>
-<img src="happy.png" alt="happy.png" width="32" height="32"><p style="background-color:green">鱼酱客户端索引</p><br>
-<a href="https://qm.qq.com/q/suD1OaaPkc">QQ交流群</a><p style="background-color:yellow">【鱼酱の客户端小盒子】：https://qm.qq.com/q/suD1OaaPkc</p>
-<i>文本邀请</i><br>
-<ol><li>已有配置</li><li>完美透矿-实体＆矿石</li><li>防砍0720</li><li>铁砧换行</li><li>材质包</li><li>细雪、可疑沙提示</li><li>有待补充</li></ol>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>
+鱼酱客户端2025-首页
+</title></head><body>
+<img src="happy.png" alt="happy" width="64" height="64">
+<img src="open.png" alt="logo" width="102" height="51">
+<br><p style="background-color:green">跳转索引</p>
+<br>
+<a href="1.html">已有配置</a><br>
+<a href="2.html">已有渠道</a><br>
+<a href="3.html">赞助商&特别鸣谢</a><br>
+<a href="4.html">联系我们</a><br>
+</body></html>
