--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
 <a href="2.html">已有渠道</a><br>
 <a href="3.html">赞助商&特别鸣谢</a><br>
 <a href="4.html">联系我们</a><br>
+<a href="MR.html">名人堂</a><br>
 </body></html>
