--- a/MR.html
+++ b/MR.html
@@ -16,8 +16,9 @@
 <img src="LGT.png" alt="麦当当" width="96" height="96">
 <h2>麦当当</h2><h4>哦买噶的，服主疯了</h4>
 <a href="MRTmdd.html">相关文献</a><br><br>
-<img src="LGT.png" alt="垃圾桶" width="96" height="96">
+<img src="space.png" alt="火箭" width="96" height="96">
 <h2>space火箭</h2><h4>神权管理火箭来了，快跑啊</h4>
 <a href="MRTspace.html">相关文献</a><br><br>
 </body>
+
 </html>
