--- a/MR.html
+++ b/MR.html
@@ -13,7 +13,7 @@
 <img src="LGT.png" alt="垃圾桶" width="96" height="96">
 <h2>垃圾桶</h2><h4>臭垃圾桶我恨你！</h4>
 <a href="MRTlgt.html">相关文献</a><br><br>
-<img src="LGT.png" alt="麦当当" width="96" height="96">
+<img src="MDD.png" alt="麦当当" width="96" height="96">
 <h2>麦当当</h2><h4>哦买噶的，服主疯了</h4>
 <a href="MRTmdd.html">相关文献</a><br><br>
 <img src="space.png" alt="火箭" width="96" height="96">
@@ -22,3 +22,4 @@
 </body>
 
 </html>
+
