--- a/MRTlgt.html
+++ b/MRTlgt.html
@@ -9,6 +9,7 @@
 <br>
 臭垃圾桶我恨你！
 <br><h3>code entity黑客帝国成员——垃圾桶</h3>
-<a href="index.html"><h2>返回</h2></a><br>
+<a href="MR.html"><h2>返回</h2></a><br>
 </body>
+
 </html>
