--- a/MRTmzs.html
+++ b/MRTmzs.html
@@ -21,6 +21,7 @@
 <br>那个人连谷歌的网站都能黑进去
 <br>还在一个月之内复刻app store
 <br><h3>选自code entity黑客帝国-梦中水传奇</h3>
-<a href="index.html"><h2>返回</h2></a><br>
+<a href="MR.html"><h2>返回</h2></a><br>
 </body>
+
 </html>
