--- a/MRTspace.html
+++ b/MRTspace.html
@@ -9,6 +9,7 @@
 <br>
 space火箭君，曾以指令神拳玩家，如今为赎罪而活<br>他从深渊里爬出来了！报复每一个背叛他的人…
 <br><h3>选自火箭外传</h3>
-<a href="index.html"><h2>返回</h2></a><br>
+<a href="MR.html"><h2>返回</h2></a><br>
 </body>
+
 </html>
