--- a/yuanshi.index.html
+++ b/yuanshi.index.html
@@ -1,12 +1,76 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>
-鱼酱客户端2025-首页
-</title></head><body>
-<img src="happy.png" alt="happy" width="64" height="64">
-<img src="open.png" alt="logo" width="102" height="51">
-<br><p style="background-color:green">跳转索引</p>
-<br>
-<a href="1.html">已有配置</a><br>
-<a href="2.html">已有渠道</a><br>
-<a href="3.html">赞助商&特别鸣谢</a><br>
-<a href="4.html">联系我们</a><br>
-</body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>鱼酱客户端2025-首页</title>
+</head>
+<body>
+  <img src="happy.png" alt="happy" width="64" height="64"><br>
+  <img src="open.png" alt="logo" width="408" height="204">
+  <br><p style="background-color:green">跳转索引</p>
+  <br>
+  <a href="1.html">已有配置</a><br>
+  <a href="2.html">已有渠道</a><br>
+  <a href="3.html">赞助商&特别鸣谢</a><br>
+  <a href="4.html">联系我们</a><br>
+  <a href="MR.html">名人堂</a><br>
+  <canvas id="particle-canvas" style="position:fixed;top:0;left:0;width:100vw;height:100vh;pointer-events:none;z-index:999;"></canvas>
+  <script>
+    const canvas = document.getElementById('particle-canvas');
+    const ctx = canvas.getContext('2d');
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+
+    let particles = [];
+    function randomColor() {
+      return `hsl(${Math.random()*360},100%,50%)`;
+    }
+
+    function createParticles(x, y) {
+      for (let i = 0; i < 30; i++) {
+        particles.push({
+          x, y,
+          r: Math.random() * 6 + 4,
+          color: randomColor(),
+          vx: (Math.random() - 0.5) * 6,
+          vy: (Math.random() - 0.5) * 6,
+          alpha: 1
+        });
+      }
+    }
+    document.addEventListener('click', function(e) {
+      createParticles(e.clientX, e.clientY);
+    });
+
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      particles.forEach(p => {
+        ctx.globalAlpha = p.alpha;
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.r, 0, 2*Math.PI);
+        ctx.fillStyle = p.color;
+        ctx.fill();
+      });
+    }
+    function update() {
+      particles.forEach(p => {
+        p.x += p.vx;
+        p.y += p.vy;
+        p.vy += 0.2; // gravity
+        p.alpha *= 0.96;
+      });
+      particles = particles.filter(p => p.alpha > 0.05);
+    }
+    function loop() {
+      update();
+      draw();
+      requestAnimationFrame(loop);
+    }
+    loop();
+  </script>
+</body>
+</html>
