--- a/MRTmdd.html
+++ b/MRTmdd.html
@@ -8,8 +8,12 @@
 <h2>麦当当</h2>
 <br>
 灌伤害<br> 骗骗花<br> 拉开距离回回拉<br> 给压压<br> 再开大压力有点大缸雷<br> 压力有点大烧缸小馒头<br> 压力大<br> 压力大如烧钢霆<br> 压力大<br> 压力雷<br> 压力像一个大爆雷
+<img src="MDD2.png" alt="麦当当1" width="85" height="89">
 <br><h3>选自麦当当个人语录</h3>
+<h4>麦当当个人语录节选</h4>
+<img src="MDD1.png" alt="麦当当语录节选" width="85" height="89"> 
 <a href="MR.html"><h2>返回</h2></a><br>
 </body>
 
 </html>
+
