--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>鱼酱客户端2025-首页</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <img src="happy.png" alt="happy" width="64" height="64"><br>
@@ -74,3 +75,4 @@
   </script>
 </body>
 </html>
+
