--- a/3.html
+++ b/3.html
@@ -3,9 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>鱼酱客户端2025-特别鸣谢</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <p style="background-color:yellow">特别鸣谢</p>
 <br><p style="background-color:yellow">天堂岛<br>下雨-三千计<i>1011930193</i><br>木泽-给我打语音电话思……<i>3402481925</i></p><br><a href="index.html">返回</a><br>
 </body>
+
 </html>
