--- a/4.html
+++ b/4.html
@@ -3,10 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>鱼酱客户端2025-联系我们</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <img src="happy.png" alt="happy.png" width="64" height="64"><p style="background-color:green">联系我们</p><br>
 <a href="https://qm.qq.com/q/suD1OaaPkc">QQ交流群</a><p style="background-color:yellow">【鱼酱の客户端小盒子】：https://qm.qq.com/q/suD1OaaPkc</p>
 <i>↑文本邀请</i><br><br><a href="index.html">返回</a><br>
 </body>
+
 </html>
