--- a/MR.html
+++ b/MR.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>鱼酱客户端2025-名人堂</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <a href="index.html"><h2>返回</h2></a>
@@ -22,5 +23,6 @@
 </body>
 
 </html>
+
 
 
